Fri May 13 08:04:48 UTC 2011  Marcel Smit  <msmit@remedy.nl>

        * tao/Bounded_Basic_String_Sequence_T.h:
        * tao/Bounded_Object_Reference_Sequence_T.h:
        * tao/Bounded_Value_Sequence_T.h:
        * tao/Unbounded_Basic_String_Sequence_T.h:
        * tao/Unbounded_Object_Reference_Sequence_T.h:
          Doxygen changes.

Wed May 11 18:43:15 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/ObjectKey_Table.h:
        * tao/orbconf.h:
        * tao/params.h:
          Doxygen changes

Wed May 11 13:35:28 UTC 2011  Marijke Hengstmengel  <mhengstmengel@remedy.nl>

        * tao/QtResource/QtResource_Loader.h:
        Changed for QT4 deprecated include QT/..

Tue May 10 18:15:28 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/ImR_Client/ImR_Client.cpp:
          changed variable name to not match method argument

        * utils/catior/catior.cpp:
        * utils/nslist/nsadd.cpp:
        * utils/nslist/nsdel.cpp:
        * utils/nslist/nslist.cpp:
          Fixed coverity errors, not leak exceptions

Tue May 10 06:15:43 UTC 2011  Marcel Smit  <msmit@remedy.nl>

        * tao/IORManipulation/IORManip_IIOP_Filter.cpp:
          Fixed compile error.

Mon May  9 19:10:54 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

        * TAO_IDL/be/be_interface.cpp:
        * tao/CSD_ThreadPool/CSD_TP_Task.cpp:
        * tao/IORManipulation/IORManip_IIOP_Filter.cpp:
          Fixed coverity errors

Wed Apr 27 13:35:10 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

        * TAO.mwc:
          Exclude DAnCE, thanks to Remko Duppen <remko dot duppen at syntel dot nl>
          for reporting this

Tue Apr 26 13:12:03 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

        * TAO_IDL/be/be_visitor_sequence/cdr_op_ch.cpp:
        * TAO_IDL/be/be_visitor_sequence/cdr_op_cs.cpp:
          Layout changes generated code

Tue Apr 26 13:04:11 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/Collocation_Resolver.h: