@@ -84,8 +84,7 @@ be_visitor_operation_direct_proxy_impl_ss::visit_operation (
     }
 
   *os << "," << be_nl
-      << "int" << be_uidt_nl
-      << ")";
+      << "int)" << be_uidt_nl;
 
   *os << be_uidt_nl
       << "{" << be_idt_nl;
